# BionicMind

./: README.md  config.yaml  pyproject.toml  run_web.py
memory_db/: chroma.sqlite3
src/bionic_mind/: __init__.py
src/bionic_mind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bionic_mind/core/: __init__.py  adaptive_emotion.py  context.py  counterfactual.py  drives.py  emotion.py  forgetting.py  hebbian.py  memory.py  meta_action.py  mind.py  perception.py  world_model.py
src/bionic_mind/llm/: __init__.py  base.py  ollama_provider.py  openai_provider.py
src/bionic_mind/ui/: __init__.py  cli.py  web.py
tests/: test_drives.py  test_emotion.py  test_hebbian.py  test_integration.py  test_memory.py  test_v2_modules.py  test_world_model.py
